--- a/Planificacion viajes/Planificacion viajes.csproj
+++ b/Planificacion viajes/Planificacion viajes.csproj
@@ -78,6 +78,12 @@
     <Compile Include="programaritinerario.Designer.cs">
       <DependentUpon>programaritinerario.cs</DependentUpon>
     </Compile>
+    <Compile Include="ventanarestaurante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ventanarestaurante.Designer.cs">
+      <DependentUpon>ventanarestaurante.cs</DependentUpon>
+    </Compile>
     <Compile Include="ventana_alojamiento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="programaritinerario.resx">
       <DependentUpon>programaritinerario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ventanarestaurante.resx">
+      <DependentUpon>ventanarestaurante.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ventana_alojamiento.resx">
       <DependentUpon>ventana_alojamiento.cs</DependentUpon>
