--- a/proyecto final itinerario/Planificacion viajes.csproj
+++ b/proyecto final itinerario/Planificacion viajes.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="menu principal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     <Compile Include="ventana_alojamiento.Designer.cs">
       <DependentUpon>ventana_alojamiento.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="menu principal.resx">
       <DependentUpon>menu principal.cs</DependentUpon>
     </EmbeddedResource>
